Fix z-indexes

--- a/css/experience.css
+++ b/css/experience.css
@@ -70,7 +70,7 @@ a{
 /*navLinks container*/
 #navLinks{
   position:absolute;
-  z-index: 99999;
+  z-index: 99;
   font-size:1.3vw;
   display:flex;
   justify-content: center;
@@ -217,7 +217,7 @@ h1.experienceHeading{
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.753);
-  z-index: 999999;
+  z-index: 98;
   width: 100vw;
   height: 100vh;
   margin: auto;
@@ -251,7 +251,7 @@ h1.experienceHeading{
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.336);
-  z-index: 9999;
+  z-index: 97;
   width: 100vw;
   height: 100vh;
   margin: auto;
@@ -291,7 +291,7 @@ h1.experienceHeading{
   align-items: center;
   justify-content: center;
   background-color: transparent;
-  z-index: 9999;
+  z-index: 96;
   width: 100vw;
   height: 100vh;
   margin: 0px auto;
@@ -309,7 +309,7 @@ h1.experienceHeading{
   flex-direction: column;
   align-items: center;
   gap:10vh;
-  z-index: 9999;
+  z-index: 96;
   left:65%;
   top:10%;
 }
@@ -411,7 +411,7 @@ h1.experienceHeading{
   display:flex;
   justify-content: center;
   align-items: center;
-  z-index: 999999;
+  z-index: 97;
   bottom:0;
   left:0;
   
@@ -431,7 +431,7 @@ h1.experienceHeading{
   align-items: center;
   /* justify-content: center; */
   gap:30px;
-  z-index: 99999;
+  z-index: 97;
   /* width:100%; */
 }
 
@@ -457,7 +457,7 @@ h1.experienceHeading{
   margin:auto;
   background-color: rgba(0, 0, 0, 0.342);
   position: absolute;
-  z-index: 99999;
+  z-index: 96;
   width: 100vw;
   height: 100vh;
   display: flex;
